# burbomath

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: camera.rs  lib.rs  range.rs
src/math/: angle.rs  complex.rs  lerp.rs  matrix.rs  misc.rs  mod.rs  non_neg.rs  point.rs  positive.rs  rational.rs  rect.rs  size.rs  traits.rs  vector.rs
src/physics/: measurement_units.rs
