[package]
name = "burbomath"
description = "Burbokop's rust math library"
license= "MIT"
version = "0.0.1"
authors = [ "borys <burbokop@gmail.com>" ]
readme = "README.md"
repository = "https://github.com/burbokop/burbomath"
documentation = "https://docs.rs/burbomath"
keywords = [ "math", "algorithms", "no-std" ]
categories = [ "algorithms", "science", "no-std" ]
edition = "2024"

[features]
default = [ "std", "serde" ]
std = [ "rand/std", "rand/std_rng" ]
serde = [ "dep:serde" ]
libm = [ "dep:libm" ]

[dependencies]
serde = { version = "1.0", features = [ "derive" ], optional = true }
libm = { version = "0.2.16", optional = true }

[dependencies.rand]
version = "0.9.1"
default-features = false
features = [ "alloc" ]

[dev-dependencies]
rand_seeder = "0.4.0"
rand_pcg = "0.9.0"
approx = "0.5.1"
